# marketplace-api-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
_notes/: OICD.md  alembic.md  cd.md  db_model_design_principles.md  docker.md  git.md  model_user.md  model_users_roles.md  orm.md  pydantic.md  ruff.md  terraform.md  uv.md  web_server.md
alembic/: env.py
alembic/versions/: 09e64aa7e2cd_create_roles_table.py  3848f5e68f4c_create_roles_table.py  615a780a744e_grant_dml_to_runtime_iam_user.py  72d712dd232e_create_orders_products_and_product_.py  8087bba81ad6_create_payments_and_order_items_tables.py  9de8a8092294_initial.py  af7136ab3d9c_create_payments_and_order_items_tables.py  e94cb1efcbec_introduce_mapped_typing_in_roles_table_.py
app/: config.py  database.py  exception.py  main.py
app/models/: __init__.py  order.py  order_item.py  payment.py  product.py  product_category.py  role.py  user.py  user_role.py
docs/: data_platform.md
terraform/: .terraform.lock.hcl  common.tfvars  main.tf
terraform/bootstrap/: .terraform.lock.hcl  bootstrap.tfvars.example  github_secrets.tf  github_variables.tf  iam.tf  main.tf  outputs.tf  project.tf  state.tf  terraform.tfvars.example  variables.tf  wif.tf
terraform/pipeline/: .terraform.lock.hcl  artifact_registry.tf  cloud_run.tf  cloud_sql.tf  main.tf  network.tf  outputs.tf  pipeline.tfvars  variables.tf
tests/: test_main.py
