[project]
name = "marketplace-api-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.133.1",
    "psycopg>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (default)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax, e.g. use f-strings instead of .format())
    "FAST", # FastAPI
    "ASYNC",
    "PL", # Pylint
    "N", # pep8-naming
]
exclude = ["alembic/versions/*.py"]

[tool.ruff.format]
exclude = ["alembic/**"]

[tool.pytest]
addopts = ["--cov=./app", "--cov-report=term-missing", "--cov-report=xml"]
